--- a/EstruturaDoHTML.html
+++ b/EstruturaDoHTML.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meu HTML</title>
 </head>
+
 <body>
-    
+    <h1>PAGINA HTML</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sint veniam quae quo, laboriosam voluptatem?
+        Debitis, maxime dolorem. Asperiores quidem exercitationem fugiat ullam consequuntur beatae dolor officiis.
+        Placeat, vel minus!</p>
+
 </body>
+
 </html>
