css functions color

--- a/css functions/index.html
+++ b/css functions/index.html
@@ -12,5 +12,7 @@
     <iframe src="math.html" frameborder="0" width="600" height="400" style="border:1px solid black;"></iframe>
 
     <iframe src="filter.html" frameborder="0" width="600" height="400" style="border:1px solid black;"></iframe>
+
+    <iframe src="color.html" frameborder="0" width="600" height="400" style="border:1px solid black;"></iframe>
 </body>
 </html>
