css functions gradient shape references

--- a/css functions/index.html
+++ b/css functions/index.html
@@ -14,5 +14,11 @@
     <iframe src="filter.html" frameborder="0" width="600" height="400" style="border:1px solid black;"></iframe>
 
     <iframe src="color.html" frameborder="0" width="600" height="400" style="border:1px solid black;"></iframe>
+
+    <iframe src="gradient.html" frameborder="0" width="600" height="400" style="border:1px solid black;"></iframe>
+
+    <iframe src="shape.html" frameborder="0" width="600" height="400" style="border:1px solid black;"></iframe>
+
+    <iframe src="references.html" frameborder="0" width="600" height="400" style="border:1px solid black;"></iframe>
 </body>
 </html>
