css functions references

--- a/css functions/references.html
+++ b/css functions/references.html
@@ -10,6 +10,6 @@
     <h1>References</h1>
     <div class="var">var</div>
     <div class="url">url</div>
-    <div class="attr">attr</div>
+    <div class="attr" aria-label="aoba-bao">attr</div>
 </body>
 </html>
